--- a/navigation.css
+++ b/navigation.css
@@ -1,24 +1,18 @@
-ul {
+.navbar{
     list-style-type: none;
-    margin: 0;
+    margin:0 ;
     padding: 0;
-    overflow: hidden;
-    background-color: #335;
+    overflow:hidden;
+    background-color:blue;
 }
-
-li {
-    float: left;
+.navbar li{
+    float:left;
 }
-
-li a {
+.navbar li a{
     display: block;
-    color: white;
-    text-align: center;
-    padding: 16px 16px;
-    text-decoration: none;
-}
-
-li a:hover {
-    background-color: blue;
-    color: white;
-}
+    color: yellow;
+    padding: 16px  16px;
+    text-decoration: yellow;
+    margin-left: 120px;
+    font-family:'Franklin Gothic Medium';
+     }
