--- a/navigation.css
+++ b/navigation.css
@@ -1,18 +1,25 @@
-.navbar{
+ul {
     list-style-type: none;
-    margin:0 ;
+    margin: 0;
     padding: 0;
-    overflow:hidden;
-    background-color:blue;
+    overflow: hidden;
+    background-color: #335;
 }
-.navbar li{
-    float:left;
+ 
+li {
+    float: left;
 }
-.navbar li a{
+ 
+li a {
     display: block;
-    color: yellow;
-    padding: 16px  16px;
-    text-decoration: yellow;
-    margin-left: 120px;
-    font-family:'Franklin Gothic Medium';
-     }
+    color: white;
+    text-align: center;
+    padding: 16px 16px;
+    text-decoration: none;
+}
+ 
+li a:hover {
+    background-color: blue;
+    color: white;
+}
+ 
